@@ -22,6 +22,7 @@ class Tokeniser (object):
 			self.next = deque()
 			self.tokens = []
 			self.generator = iter([])
+			self.announce = True
 
 		def replenish (self, content):
 			self.next.clear()
@@ -31,6 +32,7 @@ class Tokeniser (object):
 
 		def clear (self):
 			self.replenish([])
+			self.announce = True
 
 		def __call__ (self):
 			if self.next:
@@ -153,6 +155,10 @@ class Tokeniser (object):
 
 	def set_api (self, line):
 		return self._set(self._tokenise(iter([line])))
+
+	def set_action(self, command):
+		if command != 'announce':
+			self.iterate.announce = False
 
 	def __call__ (self):
 		self.number += 1
