@@ -6,6 +6,9 @@ Version explained:
 Version 4.1.3:
  * Feature: "rate-limit" (per neighbor) limit the number of BGP message(s) handled per second
  * Fix: use local IP for router-id when the peer is auto-deteted (and not the remote IP)
+ * Fix: potential python3/python2 bytes vs string issues when generating updates
+ * Fix: label is mandatory when using RD, force it, and perform better checks on the configuration
+ * CHANGE: large change to the configuration code (should not have any effect but the devil is in the details)
 
 Version 4.1.2
  * Feature: exabgpcli autocomplete
